--- a/NicolasNAUDIN_CV_save.html
+++ b/NicolasNAUDIN_CV_save.html
@@ -31,6 +31,7 @@
     <!--External links-->
         <!-- Bootstrap core CSS -->
         <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <!--Internal links-->
         <link href="assets/css/cv.css" rel="stylesheet">
@@ -144,7 +145,10 @@
                                     d-flex
                                     align-items-start">
                             <div class="content-nav content-nav-logiciels">
-                                <h5>Logiciels: </h5>
+                                <h5>
+                                    <i class="fa-brands fa-buffer"></i>
+                                    Logiciels:
+                                </h5>
                                 <a href="https://fr.wikipedia.org/wiki/Linux">
                                     <img class="fa-solid"
                                          title="Linux"
@@ -197,7 +201,10 @@
                                     d-flex
                                     align-items-start">
                             <div>
-                                <h5>Langages:</h5>
+                                <h5>
+                                    <i class="fa-solid fa-prescription-bottle"></i>
+                                    Langages:
+                                </h5>
                                 <a href="https://www.php.net/docs.php">
                                     <img class="fa-solid"
                                          title="PHP" width="24"
@@ -241,7 +248,10 @@
                                     d-flex
                                     align-items-start">
                             <div>
-                                <h5 >SoftSkill</h5>
+                                <h5>
+                                    <i class="fa-solid fa-dragon"></i>
+                                    SoftSkill
+                                </h5>
                                 <ul class="list-group"
                                     style="width: 13em;">
                                     <li class="list-group-item">Autonome</li>
@@ -253,28 +263,43 @@
                             </div>
                         </div>
                     </li>
-<!--
-.list-group
--->
+
                     <li class=" nav-item
                                 nav-item-custom">
                         <div class="col
                                     d-flex
                                     align-items-start">
                             <div>
-                                <h5>Langues</h5>
+                                <h5>
+                                    Langues
+                                </h5>
                                 <ul class="list-group">
                                     <li class="list-group-item">Français<br>
-                                        <span class="span-langues"
-                                                style="font-size: 0.8em;" >[ecrit:**,oral:***,lecture:***]</span>
+                                        <span class="span-langues">
+                                                <span class="fa fa-star checked"></span>
+                                                <span class="fa fa-star checked"></span>
+                                                <span class="fa fa-star checked"></span>
+                                                <span class="fa fa-star checked"></span>
+                                                <span class="fa fa-star"></span>
+                                        </span>
                                     </li>
-                                    <li class="list-group-item">Anglais
-                                        <span class="span-langues"
-                                              style="font-size: 0.8em;" >[ecrit:**,oral:**,lecture:***]</span>
+                                    <li class="list-group-item">Anglais<br>
+                                        <span class="span-langues">
+                                              <span class="fa fa-star checked"></span>
+                                              <span class="fa fa-star checked"></span>
+                                              <span class="fa fa-star checked"></span>
+                                              <span class="fa fa-star checked"></span>
+                                              <span class="fa fa-star"></span>    
+                                        </span>
                                     </li>
-                                    <li class="list-group-item">Allemand
-                                        <span class="span-langues"
-                                              style="font-size: 0.8em;" >[ecrit:*,oral:*,lecture:*]</span>
+                                    <li class="list-group-item">Allemand<br>
+                                        <span class="span-langues">
+                                              <span class="fa fa-star checked"></span>
+                                              <span class="fa fa-star checked"></span>
+                                              <span class="fa fa-star"></span>
+                                              <span class="fa fa-star"></span>
+                                              <span class="fa fa-star"></span>
+                                        </span>
                                     </li>
                                 </ul>
                             </div>
@@ -418,7 +443,10 @@ my-4
                 .my-4
                 -->
                 <div class="main-formation">
-                    <h4>Formations</h4>
+                    <h4>
+                        <i class="fa-solid fa-user-graduate"></i>
+                        Formations
+                    </h4>
                     <a href="https://drive.google.com/file/d/1Z5CwTRPvRPfkofEfACV43Mh7vVb4hGCs/view?usp=sharing">
                             2022 CDA Concepteur Développeur d'Applications</a>
                         <a href="https://www.forpro-creteil.org/formation/gmte77/">
@@ -679,8 +707,10 @@ my-4
 
     <!-- Import externe JavaScript-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://kit.fontawesome.com/d5c1345b47.js" crossorigin="anonymous"></script>
+
     <!-- Import interne JavaScript-->
-    <script src="js/bootstrap.bundle.js"></script>
+    <script src="assets/js/bootstrap.bundle.js"></script>
 
 </body>
 
