Changement d'adresse email

--- a/NicolasNAUDIN_CV_save.html
+++ b/NicolasNAUDIN_CV_save.html
@@ -1,5 +1,6 @@
 <!-- Hello Depuis la Console -->
 <!-- Hello Depuis Nano -->
+<!-- test Git -->
 <!doctype html>
 <html
         lang="fr">
@@ -89,7 +90,7 @@
 
                                     <i class="fa-solid
                                                 fa-envelope"></i>
-                                    <a href="mailto:naudinni@gmail.com">naudinni@gmail.com</a>
+                                    <a href="mailto:naudinni@gmail.com">776nn677@gmail.com</a>
 
                                 <hr class="my-1">
 
