--- a/NicolasNAUDIN_CV_saveIn.html
+++ b/NicolasNAUDIN_CV_saveIn.html
@@ -86,19 +86,28 @@
                             <div>
                                     <i class="fa-solid
                                                 fa-address-card"></i>
-                                    <a href="tel:+33685252965">0685252965</a>
+                                    <a 
+                                    href="tel:+33685252965">
+                                    0685252965
+                                    </a>
 
                                 <hr class="my-1">
 
                                     <i class="fa-solid
                                                 fa-envelope"></i>
-                                    <a href="mailto:naudinni@gmail.com">776nn677@gmail.com</a>
+                                    <a 
+                                    href="mailto:776nn677@gmail.com">
+                                    776nn677@gmail.com
+                                    </a>
 
                                 <hr class="my-1">
 
                                     <i class="fa-solid
                                                 fa-paper-plane"></i>
-                                    <a href="https://goo.gl/maps/VD6NmTon2sGCfa7V9">Tournan-en-Brie</a>
+                                    <a 
+                                    href="https://goo.gl/maps/VD6NmTon2sGCfa7V9">
+                                    Tournan-en-Brie
+                                    </a>
 
                                 <hr class="my-1">
 
@@ -147,26 +156,33 @@
                         <div class="col
                                     d-flex
                                     align-items-start">
-                            <div class="content-nav content-nav-logiciels">
+                            <div 
+                            class="content-nav 
+                                    content-nav-logiciels">
                                 <h5>
-                                    <i class="fa-brands fa-buffer"></i>
+                                    <i 
+                                    class="fa-brands 
+                                            fa-buffer"></i>
                                     Logiciels:
                                 </h5>
-                                <a href="https://fr.wikipedia.org/wiki/Linux">
+                                <a 
+                                href="https://fr.wikipedia.org/wiki/Linux">
                                     <img class="fa-solid"
                                          title="Linux"
                                          height="24"
                                          src="uploads/images/clipart741419.png"
                                          alt="linux.png" >
                                 </a>
-                                <a href="https://fr.wikipedia.org/wiki/GIMP">
+                                <a 
+                                href="https://fr.wikipedia.org/wiki/GIMP">
                                     <img class="fa-solid"
                                          title="Gimp"
                                          width="24"
                                          src="uploads/images/clipart2898267.png"
                                          alt="icon-gimp.png" >
                                 </a>
-                                <a href="https://www.visual-paradigm.com/">
+                                <a 
+                                href="https://www.visual-paradigm.com/">
                                     <img class="fa-solid"
                                          title="Visual Paradigm"
                                          width="24"
@@ -180,13 +196,15 @@
                                          src="https://upload.wikimedia.org/wikipedia/commons/c/c9/PhpStorm_Icon.svg"
                                          alt="phpstorm-icon.png">
                                 </a>
-                                <a href="https://fr.wikipedia.org/wiki/Symfony">
+                                <a 
+                                href="https://fr.wikipedia.org/wiki/Symfony">
                                     <img class="fa-solid"
                                          title="Symfony" height="25"
                                          src="https://symfony.com/logos/symfony_black_03.png"
                                          alt="symfony-icon.png">
                                 </a>
-                                <a href="https://fr.wikipedia.org/wiki/Google_Chrome">
+                                <a 
+                                href="https://fr.wikipedia.org/wiki/Google_Chrome">
                                     <img class="fa-solid"
                                          title="Chrome" height="25"
                                          src="https://upload.wikimedia.org/wikipedia/commons/8/87/Google_Chrome_icon_%282011%29.png"
@@ -205,7 +223,9 @@
                                     align-items-start">
                             <div>
                                 <h5>
-                                    <i class="fa-solid fa-prescription-bottle"></i>
+                                    <i 
+                                    class="fa-solid 
+                                            fa-prescription-bottle"></i>
                                     Langages:
                                 </h5>
                                 <a href="https://www.php.net/docs.php">
@@ -214,25 +234,29 @@
                                          src="https://www.pikpng.com/pngl/m/160-1603662_aol-logo-transparent-icone-php-png-clipart.png"
                                          alt="php - Clipart@pikpng.com">
                                 </a>
-                                <a href="https://docs.python.org/">
+                                <a 
+                                href="https://docs.python.org/">
                                     <img class="fa-solid"
                                          title="Python" width="24"
                                          src="uploads/images/4518857_python_icon.png"
                                          alt="https://www.iconfinder.com/icons/4518857/python_icon">
                                 </a>
-                                <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference">
+                                <a 
+                                href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference">
                                     <img class="fa-solid"
                                          title="JavaScript" width="24"
                                          src="https://upload.wikimedia.org/wikipedia/commons/6/6a/JavaScript-logo.png"
                                          alt="icon-javascript-png">
                                 </a>
-                                <a href="https://docs.oracle.com/en/java/javase/17/docs/api/index.html">
+                                <a 
+                                href="https://docs.oracle.com/en/java/javase/17/docs/api/index.html">
                                     <img class="fa-solid"
                                          title="Java" width="24"
                                          src="uploads/images/java_icon.png"
                                          alt="icon-java-png">
                                 </a>
-                                <a href="https://dev.mysql.com/doc/">
+                                <a 
+                                href="https://dev.mysql.com/doc/">
                                     <img class="fa-solid"
                                          title="Sql" width="24"
                                          src="uploads/images/NicePng_server-icon-png_2073547.png"
@@ -252,7 +276,9 @@
                                     align-items-start">
                             <div>
                                 <h5>
-                                    <i class="fa-solid fa-dragon"></i>
+                                    <i 
+                                    class="fa-solid 
+                                            fa-dragon"></i>
                                     SoftSkill
                                 </h5>
                                 <ul class="list-group"
@@ -376,21 +402,17 @@ my-4
                 <hr class="my-4">
 
                 <div class="main-APropos">
-                    <h2>A Propos!</h2>
-                    <p >
-                        Je suis passionné par l'image, le son et la communication.
-                        Les nouvelles technologies, la science, la technologie, attise ma curiosité
-                        L'architecture et le bâtiment
-                        J'ai travaillé l'image avec Gimp un utilisant Ubuntu
-                        Je suis passionné par l'image, le son et la communication.
-                        Les nouvelles technologies, la science, la technologie, attise ma curiosité
-                        L'architecture et le bâtiment
-                        J'ai travaillé l'image avec Gimp un utilisant Ubuntu
-                        Je suis passionné par l'image, le son et la communication.
-                        Les nouvelles technologies, la science, la technologie, attise ma curiosité
-                        L'architecture et le bâtiment
-                        J'ai travaillé l'image avec Gimp un utilisant Ubuntu
-                        /26/Chars/perLigne x 10[2600]Chars
+                    <h2>
+                        <i class="fa-solid fa-seedling"></i>
+                        A Propos!
+                    </h2>
+                    <p style="text-align: justify;">
+                        Je suis passionné par les nouvelles technologies, la nature, l'architecture, le <code>code</code><br>
+                        Cette année de formation m'a permis de renouer avec le coeur de la <code>programmation</code><br>
+
+                        , le développement l'informatique, linux, la conception, les 
+                        base de données, framework, python, l'aviation, java 
+
                     </p>
                 </div>
 
@@ -409,7 +431,10 @@ my-4
                             java mysql autonome collaboratif rigoureux
                             fédérateur passionné musique football randonnée
                             bricolage technicien">
-                    <h2>Compétences</h2>
+                    <h2>
+                        <i class="fa-solid fa-person-hiking"></i>
+                        Compétences
+                    </h2>
                     <p>logiciel
 
                         "aaaaaaaaaaaaaaaaaaaaaaaaaaaaa
@@ -527,7 +552,10 @@ my-4
                             autonome collaboratif rigoureux
                             fédérateur passionné musique football randonnée
                             gros oeuvres technicien Web Developer Full Stack">
-                    <h4>Expérience</h4>
+                    <h4>
+                        <i class="fa-solid fa-clover"></i>
+                        Expérience
+                    </h4>
 
                     <h5>Full-Stack Developer</h5>
 
@@ -590,8 +618,6 @@ my-4
                                 [<a href="https://fr.wikipedia.org/wiki/%C3%8Ele-de-France">
                                     Ile-de-France</a>]
                     <hr class="my-0">
-                                <a href="https://fr.wikipedia.org/wiki/Chef">
-                                    Chef</a>
                                 <a href="https://candidat.pole-emploi.fr/marche-du-travail/fichemetierrome?codeRome=I1306">
                                     Monteur</a>
                                 <a href="https://www.infogreffe.fr/entreprise-societe/504041344-ventil-s-770108B008320000.html?typeProduitOnglet=EXTRAIT&afficherretour=false">
